Add basic first bits of PoC